change DM-GAN and chen's mail

--- a/content/publications/DMGAN/featured.bib
+++ b/content/publications/DMGAN/featured.bib
@@ -1,6 +1,17 @@
-@inproceedings{zhu2019dynamic,
-  title     = {DM-GAN: Dynamic Memory Generative Adversarial Networks for Text-to-Image Synthesis},
-  author    = {Zhu, Minfeng and Pan, Pingbo and Chen, Wei and Yang, Yi},
-  booktitle = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
-  year      = {2019}
-  }
+@inproceedings{DBLP:conf/cvpr/ZhuP0019,
+  author    = {Minfeng Zhu and
+               Pingbo Pan and
+               Wei Chen and
+               Yi Yang},
+  title     = {{DM-GAN:} Dynamic Memory Generative Adversarial Networks for Text-To-Image
+               Synthesis},
+  booktitle = {{IEEE} Conference on Computer Vision and Pattern Recognition, {CVPR}
+               2019, Long Beach, CA, USA, June 16-20, 2019},
+  pages     = {5802--5810},
+  year      = {2019},
+  crossref  = {DBLP:conf/cvpr/2019},
+  url       = {http://openaccess.thecvf.com/content\_CVPR\_2019/html/Zhu\_DM-GAN\_Dynamic\_Memory\_Generative\_Adversarial\_Networks\_for\_Text-To-Image\_Synthesis\_CVPR\_2019\_paper.html},
+  timestamp = {Fri, 11 Oct 2019 14:20:01 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/cvpr/ZhuP0019},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
