--- a/content/publications/accessibility_modeling/featured.bib
+++ b/content/publications/accessibility_modeling/featured.bib
@@ -1,7 +1,12 @@
-@article{kamw2019urban,
-  title={Urban structure accessibility modeling and visualization for joint spatiotemporal constraints},
-  author={Kamw, Farah and Shamal, AL-Dohuki and Zhao, Ye and Eynon, Thomas and Sheets, David and Yang, Jing and Ye, Xinyue and Chen, Wei},
-  journal={IEEE Transactions on Intelligent Transportation Systems},
-  year={2019},
-  publisher={IEEE}
-}
+@ARTICLE{8613864,
+author={F. {Kamw} and S. {Al-Dohuki} and Y. {Zhao} and T. {Eynon} and D. {Sheets} and J. {Yang} and X. {Ye} and W. {Chen}},
+journal={IEEE Transactions on Intelligent Transportation Systems},
+title={Urban Structure Accessibility Modeling and Visualization for Joint Spatiotemporal Constraints},
+year={2020},
+volume={21},
+number={1},
+pages={104-116},
+keywords={Visualization;Trajectory;Computational modeling;Urban areas;Roads;Geospatial analysis;Urban accessibility;urban trajectories;visual analytics;geo-visualization},
+doi={10.1109/TITS.2018.2888994},
+ISSN={1558-0016},
+month={Jan},}
