add jiachengpan xumengwang

--- a/themes/academic/i18n/en.yaml
+++ b/themes/academic/i18n/en.yaml
@@ -61,6 +61,9 @@
 - id: btn_source
   translation: Source Document
 
+- id: btn_supp
+  translation: Suppl.
+
 - id: btn_copy
   translation: Copy
 
