--- a/content/publications/feng-2023-promptmagician/featured.bib
+++ b/content/publications/feng-2023-promptmagician/featured.bib
@@ -1,7 +1,10 @@
-@article{feng2023promptmagician,
-  title={PromptMagician: Interactive Prompt Engineering for Text-to-Image Creation},
-  author={Feng, Yingchaojie and Wang, Xingbo and Wong, Kam Kwai and Wang, Sijia and Lu, Yuhong and Zhu, Minfeng and Wang, Baicheng and Chen, Wei},
-  journal={arXiv},
-  year={2023},
-  doi={10.48550/arXiv.2307.09036},
+@article{Feng:2023:PromptMagician,
+  author  = {Feng, Yingchaojie and Wang, Xingbo and Wong, Kam Kwai and Wang, Sijia and Lu, Yuhong and Zhu, Minfeng and Wang, Baicheng and Chen, Wei},
+  journal = {IEEE Transactions on Visualization and Computer Graphics},
+  title   = {PromptMagician: Interactive Prompt Engineering for Text-to-Image Creation},
+  year    = {2023},
+  volume  = {},
+  number  = {},
+  pages   = {1-11},
+  doi     = {10.1109/TVCG.2023.3327168}
 }
