--- a/docs/publications/wen-2023-quantivine/featured.bib
+++ b/docs/publications/wen-2023-quantivine/featured.bib
@@ -1,20 +1,18 @@
-@article{
-  author    = {Zhen Wen and
-               Yihan Liu and
-               Siwei Tan and
-               Jieyi Chen and
-               Minfeng Zhu and
-               Dongming Han and
-               Jianwei Yin and
-               Mingliang Xu and
-               Wei Chen},
-  title     = {Quantivine: A Visualization Approach for Large-scale Quantum Circuit Representation and Analysis},
-  year      = {2023},
-  journal      = {CoRR},
-  volume       = {abs/2307.08969},
-  year         = {2023},
-  url          = {https://doi.org/10.48550/arXiv.2307.08969},
-  doi          = {10.48550/arXiv.2307.08969},
-  eprinttype    = {arXiv},
-  eprint       = {2307.08969},
+@article{Wen:2023:Quantivine,
+  author  = {Zhen Wen and
+             Yihan Liu and
+             Siwei Tan and
+             Jieyi Chen and
+             Minfeng Zhu and
+             Dongming Han and
+             Jianwei Yin and
+             Mingliang Xu and
+             Wei Chen},
+  journal = {IEEE Transactions on Visualization and Computer Graphics},
+  title   = {Quantivine: A Visualization Approach for Large-scale Quantum Circuit Representation and Analysis},
+  year    = {2023},
+  volume  = {},
+  number  = {},
+  pages   = {1-11},
+  doi     = {10.1109/TVCG.2023.3327148}
 }
